/*
 * $Id$
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 15:50 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2021-02-11 00:05 UTC+0100 Wilfried Brunken DF7BE
  * doc/hwgdoc_commands.html
  * doc/hwgdoc_functions.html
  * image/exclmk_trsp.bmp
  * image/exclmk_trsp.png
  * samples/tstcombo.prg
    ! Ticket #36 Test with two relayed comboboxes:
    ! tstcombo.prg ready for GTK, no runs best
    ! as demo for help for ticket.
    ! Docu updated:	
    ! COMBOBOX ... EDIT not GTK, crashes
    ! Litte correction. 


2021-02-04 09:40 UTC+0100 Wilfried Brunken DF7BE
  * image/D.bmp
  * image/D.ico
  * image/W.bmp
  * image/W.ico
  * samples/icons2.prg
  * samples/Readme.txt
    ! Ticket #61: see post to ticket.


2021-01-31 18:40 UTC+0100 Wilfried Brunken DF7BE
  * Changelog
    ! Ticket #75: PellesC support
    ! José M. C. Quintas reported in post of ticket,
    ! that the user "Rajesh Mishra" sends the code modifications
    ! to his fork. Please send MNI TNX to him.
    ! José pleased to write this info the
    ! Changelog
  * doc/hwgdoc_functions.html
  * samples/arraybrowse.prg
    ! Additional information for
    ! usage of function hwg_Createarlist()

2021-01-25 17:20 UTC+0100 Wilfried Brunken DF7BE
  * makefile.pc
  * samples/dev/compiler/PellesC/PellesC.txt
  * samples/dev/env/pfad_pc.bat
    ! Ticket #75: PellesC support
    ! Modifications by José M. C. Quintas 
    ! + litte mods.
    ! Seems to be error in C compiler
    ! (Access violation building Harbour)
 

2021-01-23 18:40 UTC+0100 Wilfried Brunken DF7BE
  * doc/hwgdoc_functions.html
  * samples/Readme.txt
  * samples/arraybrowse.prg (New)
  * source/gtk/hmisc.prg
  * source/winapi/hmisc.prg
  * test/hwmingnw_gtk.bat (New)
  * test/testunitc.prg (New)
    ! New functions for unit conversion added,
    ! Docu updated.
    ! New sample for BROWSE array,
    ! HBROWSE class has some bugs, the new